--- a/Frontend/Views/Home/Index.cshtml
+++ b/Frontend/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 <div class="container-fluid">
   @{
     var baseApiUrl = Url.Content("~/");
-    var hotReload = true;
+    var hotReload = false;
     var hotReloadBaseUrl = "http://localhost:10009/";
   }
 
